small css fix + hide collapse when item is selected

--- a/css/index.css
+++ b/css/index.css
@@ -55,7 +55,8 @@ hr{
   top : 210px;
   padding: 20px 20px;
   font-size: 30px;
-  box-shadow: 5px 5px 2px #888888;
+  border-radius: 6px;
+  box-shadow: 2px 2px 2px #888888;
 }
 
 .btn:hover{
@@ -84,6 +85,12 @@ hr{
     width: 42px;
     margin-top: 10px;
     height: auto;
+  }
+}
+
+@media(max-width:360px){
+  .navbar-toggle{
+    margin-right: -8px;
   }
 }
 
